--- a/_posts/2000-01-01-template.markdown
+++ b/_posts/2000-01-01-template.markdown
@@ -5,6 +5,9 @@ published: false
 category: [misc]
 ---
 
+* TOC
+{:toc}
+
 this is my post template.
 
 <script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
