mermaid diagrams without plugin

--- a/_posts/2000-01-01-template.markdown
+++ b/_posts/2000-01-01-template.markdown
@@ -4,18 +4,20 @@ layout: post
 published: true
 category: [misc]
 ---
-<!-- <link rel="stylesheet" type="text/css" href="/css/mermaid.css"> -->
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.0.0/mermaid.min.css">
+
 * TOC
 {:toc}
 
 # This is my post template.
 
-{% mermaid %}
+<div class="mermaid">
 graph TD;
     A-->B;
     A-->C;
     B-->D;
     C-->D;
-{% endmermaid %}
+</div>
 
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.0.0/mermaid.min.js"></script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
