add sitemap for SEO

--- a/_posts/2000-01-01-template.markdown
+++ b/_posts/2000-01-01-template.markdown
@@ -1,7 +1,7 @@
 ---
 title: Draft Template
 layout: post
-published: true
+published: false
 category: [misc]
 ---
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.0.0/mermaid.min.css">
