show excerpt, use whole excerpt (not only first paragraph) as meta description

--- a/_posts/2000-01-01-template.md
+++ b/_posts/2000-01-01-template.md
@@ -1,10 +1,16 @@
 ---
 title: Draft Template
-description: This is a template for Blog posts
 layout: post
-published: false
+published: false 
 category: [misc]
 ---
+
+This is a template for Blog posts.
+
+A concise and sophisticated template.
+
+<!--more-->
+
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/mermaid/7.0.0/mermaid.min.css">
 
 * TOC
