--- a/_posts/2017-06-01-todopomo.md
+++ b/_posts/2017-06-01-todopomo.md
@@ -7,6 +7,8 @@ category: [Pomodoro, Todo, GTD, time, tools, Visual Studio Code]
 
 TodoPomo is a Visual Studio Code extension that combines To Do Task and Pomodoro. It helps you focus on 25-mins work period and track your everyday achievements.
 
+<!--more-->
+
 ![TodoPomo](https://github.com/easton042/TodoPomo/raw/dev/images/TodoPomo.gif)
 
 When editing "To Do Tasks" file, you can start a Pomodoro with a task name by placing cursor in the task line and pressing ALT + S shortcut or clicking the green play button at the bottom right corner.
