2017-06-17-graphic-design-by-university-of-colorado-boulder.md

--- a/_posts/2000-01-01-template.md
+++ b/_posts/2000-01-01-template.md
@@ -16,6 +16,8 @@ A concise and sophisticated template.
 * TOC
 {:toc}
 
+# Equations
+
 This is inline equation: \\(E=mc^2\\)
 
 This is block/display equation, if block equation is embedded inline and that line only contains one equation, the equation become a inline equation.
@@ -24,7 +26,13 @@ $$E=mc^2$$
 
 Don't config $ for inline equation, single $ is used too frequently and can easily cause trouble.
 
-# This is my post template.
+# Images
+
+![upaiyun image](https://eastonlee.b0.upaiyun.com/alipay_donation.JPG!/fw/300)
+![AWS CloudFront image](https://cdn.eastonlee.com/alipay_donation.JPG)
+![Rule of thirds](https://upload.wikimedia.org/wikipedia/commons/c/ce/Rivertree_thirds_md.gif){:width="100px"}
+
+# Meimaid graph
 
 [](http://knsv.github.io/mermaid/live_editor/)
 
