after changing GitHub username to EastonLee, update links address

--- a/_posts/2017-06-01-todopomo.md
+++ b/_posts/2017-06-01-todopomo.md
@@ -44,7 +44,7 @@ This extension contributes the following settings:
 
 ## Source Code
 
-Fork, Issue, PR are all welcome on [GitHub](https://github.com/easton042/TodoPomo).
+Fork, Issue, PR are all welcome on [GitHub](https://github.com/eastonlee/TodoPomo).
 
 ## Credits
 
