Google structured data seo finished

--- a/_posts/2000-01-01-template.md
+++ b/_posts/2000-01-01-template.md
@@ -2,6 +2,7 @@
 title: Draft Template
 layout: post
 published: false 
+image: https://upload.wikimedia.org/wikipedia/commons/c/ce/Rivertree_thirds_md.gif
 category: [misc]
 ---
 
