--- a/_posts/2000-01-01-template.md
+++ b/_posts/2000-01-01-template.md
@@ -1,7 +1,8 @@
 ---
 title: Draft Template
 layout: post
-published: false 
+published: false
+last_modified_at: 2001-01-02
 image: https://upload.wikimedia.org/wikipedia/commons/c/ce/Rivertree_thirds_md.gif
 category: [misc]
 ---
