hotfix: Podcast artwork must be between 1400 x 1400 and 3000 x 3000 pixels, JPG or PNG, in RGB color space, and hosted on a server that allows HTTP head requests.

--- a/_podcasts/2017-01-01-template.md
+++ b/_podcasts/2017-01-01-template.md
@@ -6,10 +6,13 @@ tags:
 - tagtwo
 - tagthree
 # permalink: /35/
-image: /assets/avatar.jpg
+image: /assets/avatar.png
 podcast_link: http://cdn.eastonlee.com/podcasts/20170822.wav
 podcast_file_size: 537 KB
 podcast_duration: "00:03"
 podcast_length: 534268
-podcast_guid: ?p=1
+# podcast_guid: podcasts/2017/01/01/template/
 ---
+
+Description goes here.
+<!--more-->
